--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,12 +9,20 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2.3.1
       - name: prepare
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+      - name: dependencies
         run: |
-          apt -y install pandoc
-          pip3 install -r requirements.txt
+          python -m pip install --upgrade pip
+          pip install setuptools wheel twine
       - name: build
         run: |
           make build
       - name: publish
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         run: |
+          make build
           make upload
