--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,7 @@
 name: build
-on:
-  repository_dispatch
+on: 
+  workflow_dispatch:
+  repository_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
