--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,6 +2,8 @@ name: build
 on: 
   workflow_dispatch:
   repository_dispatch:
+  schedule:
+    - cron: "18 2 * * *"
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -20,6 +22,7 @@ jobs:
       - name: build
         run: |
           make docs
+          make update
           make build
       - name: publish
         env:
