--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,7 @@ jobs:
           python-version: '3.x'
       - name: dependencies
         run: |
-          sudo apt update && sudo apt -y upgrade && sudo apt -y install pandoc
+          sudo apt -y install pandoc
           python -m pip install --upgrade pip
           pip install setuptools wheel twine
       - name: build
